GNOME Bugzilla – Bug 780902
gnome-panel crashes if adding and removing modem-lights
Last modified: 2017-04-11 07:46:13 UTC
Steps to reproduce: 1) Add modem-lights to panel; 2) Remove it. Stack trace with gnome-panel 3.24.1, gnome-applets 3.24.0:
+ Trace 237325
g_source_remove is missing for priv->directives_id...