modem-lights: fix crash removing applet from panel

https://bugzilla.gnome.org/show_bug.cgi?id=780902